--- a/src/confabuletition.html
+++ b/src/confabuletition.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Confabuletition | AG001: repetition as "confabulation"</title>
+  <link rel="stylesheet" href="../page-theme.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
   <style>
 :root{
-  --bg: #0a0c10;
-  --fg: #e0e8f0;
-  --muted: rgba(224,232,240,.72);
+  /* Align with arcade noir palette (page-theme.css) */
+  --bg: #0a0a0a;
+  --fg: #7ec8e3;
+  --muted: rgba(126,200,227,.72);
   --panel: rgba(255,255,255,.05);
-  --stroke: rgba(255,255,255,.12);
-  --accent: rgba(100,200,220,.9);
-  --accent-glow: rgba(100,200,220,.15);
+  --stroke: rgba(126,200,227,.18);
+  --accent: #00ffff;
+  --accent-glow: rgba(0,255,255,.15);
 
   --size: 18px;
   --opacity: 0.6;
@@ -413,7 +415,7 @@ body.invert{
   </style>
 </head>
 <body>
-  <a class="home-link" href="../index.html">←</a>
+  <a href="../index.html" class="home-link">←</a>
   <a class="skip" href="#controls">Skip to controls</a>
 
   <header class="frame" aria-label="Framing">
