--- a/src/examples/phaser/phaser-space-shooter.html
+++ b/src/examples/phaser/phaser-space-shooter.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../page-theme.css">
+    <link rel="stylesheet" href="../../../page-theme.css">
     <title>Phaser Space Shooter</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.80.1/dist/phaser.min.js"></script>
 </head>
 <body>
-    <a href="../../index.html" class="home-link"></a>
+    <a href="../../../index.html" class="home-link"></a>
 
     <div class="container">
         <h1>Space Shooter</h1>
-        <p class="subtitle">Phaser framework demonstration</p>
+        <p class="subtitle">Arrow keys or D-pad controls</p>
 
         <div class="game-wrapper">
             <div class="stats-bar">
@@ -30,15 +30,19 @@
             <!-- Hybrid controls: D-pad movement + shoot button -->
             <div class="mobile-controls">
                 <div class="control-btn empty"></div>
-                <button class="control-btn" id="btnUp">↑</button>
+                <button class="control-btn" id="btnUp" aria-label="Move up">↑</button>
                 <div class="control-btn empty"></div>
-                <button class="control-btn" id="btnLeft">←</button>
-                <button class="control-btn" id="btnDown">↓</button>
-                <button class="control-btn" id="btnRight">→</button>
+                <button class="control-btn" id="btnLeft" aria-label="Move left">←</button>
+                <button class="control-btn" id="btnDown" aria-label="Move down">↓</button>
+                <button class="control-btn" id="btnRight" aria-label="Move right">→</button>
             </div>
 
             <div class="control-actions">
-                <button class="btn btn-primary" id="btnShoot">FIRE</button>
+                <button class="btn btn-primary" id="btnShoot" aria-label="Fire weapon">FIRE</button>
+            </div>
+
+            <div id="restart-container" class="restart-container" style="display: none;">
+                <button class="btn btn-primary" id="btnRestart" aria-label="Restart game">RESTART</button>
             </div>
         </div>
     </div>
@@ -50,6 +54,14 @@
         const CYAN = 0x00ffff;
         const WHITE = 0xffffff;
 
+        // Game constants
+        const PLAYER_SPEED = 200;
+        const BULLET_SPEED = 400;
+        const FIRE_RATE = 300;
+        const ENEMY_SPAWN_DELAY = 1500;
+        const ENEMY_MIN_SPEED = 80;
+        const ENEMY_MAX_SPEED = 150;
+
         // Game state
         let score = 0;
         let lives = 3;
@@ -57,7 +69,7 @@
         let player, enemies, bullets;
         let cursors, shootKey;
         let lastFired = 0;
-        let fireRate = 300; // ms between shots
+        let mobileFirePressed = false;
         let enemySpawnTimer;
 
         // Phaser config with noir theme integration
@@ -69,7 +81,7 @@
             height: 500,
             scale: {
                 mode: Phaser.Scale.FIT,
-                autoCenter: Phaser.Scale.CENTER_BOTH
+                autoCenter: Phaser.Scale.NO_CENTER
             },
             physics: {
                 default: 'arcade',
@@ -88,10 +100,9 @@
 
         function create() {
             // Create player ship
-            player = this.physics.add.sprite(200, 450, null)
-                .setDisplaySize(20, 20)
-                .setTint(CYAN);
-            player.setCollideWorldBounds(true);
+            player = this.add.rectangle(200, 450, 20, 20, CYAN);
+            this.physics.add.existing(player);
+            player.body.setCollideWorldBounds(true);
 
             // Create groups
             enemies = this.physics.add.group();
@@ -107,7 +118,7 @@
 
             // Spawn enemies periodically
             enemySpawnTimer = this.time.addEvent({
-                delay: 1500,
+                delay: ENEMY_SPAWN_DELAY,
                 callback: spawnEnemy,
                 callbackScope: this,
                 loop: true
@@ -131,23 +142,23 @@
 
             // Player movement
             if (cursors.left.isDown) {
-                player.setVelocityX(-200);
+                player.setVelocityX(-PLAYER_SPEED);
             } else if (cursors.right.isDown) {
-                player.setVelocityX(200);
+                player.setVelocityX(PLAYER_SPEED);
             } else {
                 player.setVelocityX(0);
             }
 
             if (cursors.up.isDown) {
-                player.setVelocityY(-200);
+                player.setVelocityY(-PLAYER_SPEED);
             } else if (cursors.down.isDown) {
-                player.setVelocityY(200);
+                player.setVelocityY(PLAYER_SPEED);
             } else {
                 player.setVelocityY(0);
             }
 
             // Shooting
-            if ((shootKey.isDown || cursors.space?.isDown) && time > lastFired + fireRate) {
+            if ((shootKey.isDown || mobileFirePressed) && time > lastFired + FIRE_RATE) {
                 shoot(this);
                 lastFired = time;
             }
@@ -168,10 +179,9 @@
         }
 
         function shoot(scene) {
-            const bullet = scene.physics.add.sprite(player.x, player.y - 15, null)
-                .setDisplaySize(4, 12)
-                .setTint(CYAN);
-            bullet.setVelocityY(-400);
+            const bullet = scene.add.rectangle(player.x, player.y - 15, 4, 12, CYAN);
+            scene.physics.add.existing(bullet);
+            bullet.body.setVelocityY(-BULLET_SPEED);
             bullets.add(bullet);
         }
 
@@ -179,10 +189,9 @@
             if (gameOver) return;
 
             const x = Phaser.Math.Between(20, 380);
-            const enemy = this.physics.add.sprite(x, -20, null)
-                .setDisplaySize(20, 20)
-                .setTint(RED);
-            enemy.setVelocityY(Phaser.Math.Between(80, 150));
+            const enemy = this.add.rectangle(x, -20, 20, 20, RED);
+            this.physics.add.existing(enemy);
+            enemy.body.setVelocityY(Phaser.Math.Between(ENEMY_MIN_SPEED, ENEMY_MAX_SPEED));
             enemies.add(enemy);
         }
 
@@ -199,7 +208,7 @@
             updateLives();
 
             if (lives <= 0) {
-                endGame();
+                endGame.call(this);
             }
         }
 
@@ -226,6 +235,25 @@
                 stroke: '#000000',
                 strokeThickness: 2
             }).setOrigin(0.5);
+
+            // Show restart button
+            document.getElementById('restart-container').style.display = 'block';
+        }
+
+        function wireDirectionalButton(button, cursorKey) {
+            ['touchstart', 'mousedown'].forEach(eventType => {
+                button.addEventListener(eventType, (e) => {
+                    e.preventDefault();
+                    cursorKey.isDown = true;
+                }, { passive: false });
+            });
+
+            ['touchend', 'mouseup', 'touchcancel'].forEach(eventType => {
+                button.addEventListener(eventType, (e) => {
+                    e.preventDefault();
+                    cursorKey.isDown = false;
+                }, { passive: false });
+            });
         }
 
         function setupMobileControls(scene) {
@@ -234,41 +262,33 @@
             const btnLeft = document.getElementById('btnLeft');
             const btnRight = document.getElementById('btnRight');
             const btnShoot = document.getElementById('btnShoot');
+            const btnRestart = document.getElementById('btnRestart');
 
-            if (!btnUp) return;  // No D-pad for direct-touch games
+            if (!btnUp) return;
 
-            // Touch + click for mobile + desktop
-            ['touchstart', 'click'].forEach(eventType => {
-                btnUp.addEventListener(eventType, (e) => {
-                    e.preventDefault();
-                    cursors.up.isDown = true;
-                    setTimeout(() => cursors.up.isDown = false, 100);
-                }, { passive: false });
+            // Wire restart button
+            if (btnRestart) {
+                btnRestart.addEventListener('click', () => location.reload());
+            }
 
-                btnDown.addEventListener(eventType, (e) => {
-                    e.preventDefault();
-                    cursors.down.isDown = true;
-                    setTimeout(() => cursors.down.isDown = false, 100);
-                }, { passive: false });
+            // Wire D-pad buttons
+            wireDirectionalButton(btnUp, cursors.up);
+            wireDirectionalButton(btnDown, cursors.down);
+            wireDirectionalButton(btnLeft, cursors.left);
+            wireDirectionalButton(btnRight, cursors.right);
 
-                btnLeft.addEventListener(eventType, (e) => {
-                    e.preventDefault();
-                    cursors.left.isDown = true;
-                    setTimeout(() => cursors.left.isDown = false, 100);
-                }, { passive: false });
-
-                btnRight.addEventListener(eventType, (e) => {
-                    e.preventDefault();
-                    cursors.right.isDown = true;
-                    setTimeout(() => cursors.right.isDown = false, 100);
-                }, { passive: false });
-
+            // Shoot button (continuous press)
+            ['touchstart', 'mousedown'].forEach(eventType => {
                 btnShoot.addEventListener(eventType, (e) => {
                     e.preventDefault();
-                    if (!gameOver && Date.now() > lastFired + fireRate) {
-                        shoot(scene);
-                        lastFired = Date.now();
-                    }
+                    mobileFirePressed = true;
+                }, { passive: false });
+            });
+
+            ['touchend', 'mouseup', 'touchcancel'].forEach(eventType => {
+                btnShoot.addEventListener(eventType, (e) => {
+                    e.preventDefault();
+                    mobileFirePressed = false;
                 }, { passive: false });
             });
         }
@@ -281,14 +301,30 @@
         function updateLives() {
             document.getElementById('lives').textContent = lives;
         }
+
+        // Clean up on page unload
+        window.addEventListener('beforeunload', () => {
+            if (game) {
+                game.destroy(true);
+            }
+        });
     </script>
 
     <style>
+        #phaser-container {
+            margin: 0 auto;
+            width: fit-content;
+            touch-action: manipulation;
+        }
+
         #phaser-container canvas {
+            display: block;
+            margin: 0 auto;
             max-width: 100%;
             height: auto;
             border: 3px solid var(--color-text);
             box-shadow: 0 0 30px rgba(126, 200, 227, 0.4);
+            touch-action: manipulation;
         }
 
         @media (max-width: 768px) {
@@ -307,6 +343,19 @@
             min-width: 120px;
             font-size: 18px;
         }
+        /* Center button in control-actions */
+        .control-actions {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+
+        .restart-container {
+            margin-top: 10px;
+            text-align: center;
+        }
     </style>
+
+    <script src="../../../stars.js" defer></script>
 </body>
 </html>
